--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>xerces</groupId>
+      <artifactId>xercesImpl</artifactId>
+      <version>2.12.1</version>
+    </dependency>
   </dependencies>
 
   <build>
